Fix scrollbar overlap

--- a/css/animal_selector.styl
+++ b/css/animal_selector.styl
@@ -486,7 +486,7 @@
 
       .toggles {
         position: absolute;
-        right: 0;
+        right: 20px;
         top: 100%;
 
         button[name="toggle"] {
